k8s/expenses-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenses-repo-deployment
  labels:
    app: expenses-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenses-repo
  template:
    metadata:
      labels:
        app: expenses-repo
    spec:
      containers:
        - name: expenses-repo-container
          image: 014498641718.dkr.ecr.eu-north-1.amazonaws.com/expenses-repo:$CICD_GIT_COMMIT
          ports:
            - containerPort: 80 # Define the port your app is listening on
---
apiVersion: v1
kind: Service
metadata:
  name: expenses-repo-service
  labels:
    app: expenses-repo

spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443

  selector:
    app: expenses-repo
