k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api-api-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expenses-repo-service
                port:
                  number: 80
    - host: db.api-api-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster-example-rw-lb
                port:
                  number: 5432 # Use the port your database is listening on
  tls:
    - hosts:
        - api-api-api.com
        - db.api-api-api.com
      secretName: cert-secret-name
